--- a/assets/css/pages/inner-pages.css
+++ b/assets/css/pages/inner-pages.css
@@ -87,11 +87,18 @@
   border: none;
   text-align: center;
 }
+.minland-list .card span {
+  font-size: 40px;
+  font-weight: 500;
+  margin-bottom: 30px;
+}
 .minland-list .card strong {
   font-size: 18px;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
+  color: #000;
 }
 .minland-list .card p {
+  color: #000;
   text-align: center;
 }
 
@@ -298,6 +305,22 @@
     margin-bottom: 40px;
   }
 }
+.offshore-lisence .card {
+  text-align: center;
+  border: none;
+  background-color: #DFF2EB;
+  padding: 30px 20px;
+}
+.offshore-lisence .card span {
+  font-size: 40px;
+  margin-bottom: 30px;
+}
+.offshore-lisence .card p {
+  font-size: 22px;
+  line-height: 30px;
+  font-weight: 600;
+  color: #000;
+}
 
 .freezone-tab .title {
   color: #013346;
@@ -345,4 +368,158 @@
 .freezone-tab .lists .tab-content {
   background-color: #E9EFEC;
   margin-top: 15px;
+}
+
+.business-process {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+.business-process .title {
+  color: #013346;
+  max-width: -webkit-max-content;
+  max-width: -moz-max-content;
+  max-width: max-content;
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 992px) {
+  .business-process .title {
+    margin: auto;
+    margin-bottom: 30px;
+  }
+}
+.business-process p {
+  font-size: 18px;
+  max-width: 870px;
+  margin: auto;
+  text-align: center;
+  margin-bottom: 30px;
+}
+.business-process .timeline {
+  position: relative;
+  max-width: var(--width-container);
+  margin: 0 auto;
+  padding: var(--spacing-xxl) 0;
+}
+.business-process .timeline::after {
+  content: "";
+  position: absolute;
+  width: 8px;
+  background: linear-gradient(190deg, #EB2227 0%, #013346 100%) !important;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  border-radius: 4px;
+  height: 0;
+  -webkit-transition: height 1.5s ease-out, opacity 1.5s ease-out;
+  transition: height 1.5s ease-out, opacity 1.5s ease-out;
+}
+.business-process .timeline-container {
+  position: relative;
+  width: 50%;
+  padding: 10px 30px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  opacity: 0;
+  -webkit-transform: translateY(50px);
+          transform: translateY(50px);
+  -webkit-transition: opacity 0.6s ease-out, -webkit-transform 0.6s ease-out;
+  transition: opacity 0.6s ease-out, -webkit-transform 0.6s ease-out;
+  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+  transition: opacity 0.6s ease-out, transform 0.6s ease-out, -webkit-transform 0.6s ease-out;
+  width: 450px;
+}
+.business-process .timeline-container.left {
+  left: 12.5%;
+}
+.business-process .timeline-container.right {
+  left: 50%;
+}
+.business-process .timeline-container::before {
+  content: "";
+  position: absolute;
+  top: 10px;
+  width: 24px;
+  height: 24px;
+  background: var(--text-lighter);
+  border: 4px solid var(--accent-color);
+  border-radius: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  left: 50%;
+  z-index: 99999;
+}
+.business-process .content {
+  padding: 30px 20px;
+  background-color: var(--text-lighter);
+  position: relative;
+  border-radius: var(--spacing-l);
+  -webkit-box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  -webkit-transition: -webkit-box-shadow 0.3s ease, -webkit-transform 0.3s ease;
+  transition: -webkit-box-shadow 0.3s ease, -webkit-transform 0.3s ease;
+  transition: box-shadow 0.3s ease, transform 0.3s ease;
+  transition: box-shadow 0.3s ease, transform 0.3s ease, -webkit-box-shadow 0.3s ease, -webkit-transform 0.3s ease;
+  text-align: center;
+  color: var(--background-dark);
+}
+.business-process .content strong {
+  margin-bottom: 15px;
+  font-size: 18px;
+  display: block;
+}
+.business-process .content p {
+  font-weight: 400;
+  font-size: 16px;
+  margin-bottom: 0;
+}
+.business-process .content:hover {
+  -webkit-box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
+          box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+}
+.business-process .icon {
+  font-size: 32px;
+  margin-right: var(--spacing-s);
+  color: #F67B50; /* Fallback color */
+}
+.business-process a.content-link {
+  text-decoration: none;
+  color: inherit;
+  display: block;
+}
+@media screen and (max-width: 600px) {
+  .business-process .timeline::after {
+    left: 31px;
+  }
+  .business-process .timeline-container {
+    width: 100%;
+    padding-left: 80px;
+    padding-right: 40px;
+    margin-bottom: var(--spacing-l);
+  }
+  .business-process .timeline-container.left::before, .business-process .timeline-container.right::before {
+    left: 31px;
+  }
+  .business-process .timeline-container.right {
+    left: 0%;
+  }
+  .business-process .timeline-container.left, .business-process .timeline-container.right {
+    left: 0;
+  }
+}
+.business-process .show {
+  opacity: 1;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+.business-process .timeline.show-line::after {
+  height: 100%;
+  opacity: 1;
+}
+.business-process .timeline.hide-line::after {
+  height: 0;
+  opacity: 0;
 }
