--- a/assets/scss/pages/about-us.scss
+++ b/assets/scss/pages/about-us.scss
@@ -193,12 +193,20 @@
         border: none;
         .pill{
             position: absolute;
-            top: 20px;
-            right: 30%;
-            width: 30px;
-            height: 30px;
+            top: 10px;
+            right: 26%;
+            width: 50px;
+            height: 50px;
             border-radius: 100%;
-            background-color: #000;
+            border: 3px solid #0077B5;
+            background-color: #0077B5;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            i{
+                font-size: 25px;
+                color: #fff;
+            }
         }
         figure{
             width: 150px;
@@ -212,6 +220,7 @@
             font-size: 18px;
             font-weight: 500;
             margin-bottom: 10px;
+            line-height: 20px;
         }
         span{
             font-size: 16px;
