--- a/assets/scss/pages/business-setup.scss
+++ b/assets/scss/pages/business-setup.scss
@@ -205,7 +205,15 @@ z-index: -1;
                     color: #000;
                     font-size: 18px;
                     font-weight: 500;
-                    margin-bottom: 20px;
+                    margin-bottom: 25px;
+                    display: flex;
+                    align-items: center;
+
+                    span{
+                        font-size: 30px;
+                        display: inline-block;
+                        margin-right: 30px;
+                    }
                   
                 }
             }
@@ -241,11 +249,21 @@ z-index: -1;
         }
         .item{
             padding: 50px 30px;
+            padding-top: 20px;
             padding-bottom: 30px;
             background: #ffffff;
             box-shadow: 0 0 10px #cccccc;
             height: 100%;
             text-align: center;
+            position: relative;
+            .icon{
+               margin-bottom: 30px;
+                span{
+                    font-size: 40px;
+                    color: $third-color;
+                    font-weight: 500;
+                }
+            }
             .info{
                 text-align: center;
             }
@@ -342,7 +360,7 @@ z-index: -1;
       .timeline-container::before {
         content: "";
         position: absolute;
-        top: 30px;
+        top: 10px;
         width: 24px;
         height: 24px;
         background: var(--text-lighter);
