--- a/assets/scss/pages/inner-pages.scss
+++ b/assets/scss/pages/inner-pages.scss
@@ -72,11 +72,18 @@
     .card{
         border: none;
         text-align: center;
+        span{
+            font-size: 40px;
+            font-weight: 500;
+            margin-bottom: 30px;
+        }
         strong{
           font-size: 18px;
-          margin-bottom: 20px;
+          margin-bottom: 15px;
+          color: #000;
         }
         p{
+            color: #000;
             text-align: center;
         }
     }
@@ -287,6 +294,7 @@
 }
 
 .offshore-lisence{
+   
     .title {
         color: $primary;
         max-width: max-content;
@@ -295,6 +303,22 @@
 
         @include min(992) {
             margin-bottom: 40px;
+        }
+    }
+    .card{
+        text-align: center;
+        border: none;
+        background-color: #DFF2EB;
+        padding: 30px 20px;
+        span{
+            font-size: 40px;
+            margin-bottom: 30px;
+        }
+        p{
+            font-size: 22px;
+            line-height: 30px;
+            font-weight: 600;
+            color: #000;
         }
     }
 }
@@ -346,3 +370,162 @@
     }
   }
 }
+
+.business-process{
+    padding-top: 100px;
+    padding-bottom: 100px;
+    .title {
+        color: $primary;
+        max-width: max-content;
+        margin-bottom: 20px;
+
+        @include min(992) {
+            margin: auto;
+            margin-bottom: 30px;
+        }
+    }
+    p{
+        font-size: 18px;
+        max-width: 870px;
+        margin: auto;
+        text-align: center;
+        margin-bottom: 30px;
+    }
+    .timeline {
+        position: relative;
+        max-width: var(--width-container);
+        margin: 0 auto;
+        padding: var(--spacing-xxl) 0;
+      }
+    
+      .timeline::after {
+        content: '';
+        position: absolute;
+        width: 8px;
+        background: linear-gradient(190deg, #EB2227 0%, #013346 100%) !important;
+        top: 0;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        border-radius: 4px;
+        height: 0;
+        transition: height 1.5s ease-out, opacity 1.5s ease-out;
+      }
+    
+      .timeline-container {
+        position: relative;
+        width: 50%;
+        padding: 10px 30px;
+        box-sizing: border-box;
+        opacity: 0;
+        transform: translateY(50px);
+        transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+        width: 450px;
+      }
+    
+      .timeline-container.left {
+        left: 12.5%;
+
+      }
+    
+      .timeline-container.right {
+        left: 50%;
+      }
+    
+      .timeline-container::before {
+        content: "";
+        position: absolute;
+        top: 10px;
+        width: 24px;
+        height: 24px;
+        background: var(--text-lighter);
+        border: 4px solid var(--accent-color);
+        border-radius: 50%;
+        transform: translate(-50%, -50%);
+        left: 50%;
+        z-index: 99999;
+      }
+    
+      .content {
+        padding: 30px 20px;
+        background-color: var(--text-lighter);
+        position: relative;
+        border-radius: var(--spacing-l);
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        transition: box-shadow 0.3s ease, transform 0.3s ease;
+        text-align: center;
+        color: var(--background-dark);
+        strong{
+            margin-bottom: 15px;
+            font-size: 18px;
+            display: block;
+        }
+        p{
+            font-weight: 400;
+            font-size: 16px;
+            margin-bottom: 0;
+        }
+      }
+    
+      .content:hover {
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
+        transform: scale(1.05);
+      }
+    
+         .icon {
+                font-size: 32px;
+                margin-right: var(--spacing-s);
+    
+                color: #F67B50; /* Fallback color */
+            }
+    
+    
+    
+    
+      a.content-link {
+        text-decoration: none;
+        color: inherit;
+        display: block;
+      }
+    
+      @media screen and (max-width: 600px) {
+        .timeline::after {
+          left: 31px;
+        }
+    
+        .timeline-container {
+          width: 100%;
+          padding-left: 80px;
+          padding-right: 40px;
+          margin-bottom: var(--spacing-l);
+        }
+    
+        .timeline-container.left::before, .timeline-container.right::before {
+          left: 31px;
+        }
+    
+        .timeline-container.right {
+          left: 0%;
+        }
+    
+        .timeline-container.left, .timeline-container.right {
+          left: 0;
+        }
+      }
+    
+      .show {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    
+      .timeline.show-line::after {
+        height: 100%;
+        opacity: 1;
+      }
+    
+      .timeline.hide-line::after {
+        height: 0;
+        opacity: 0;
+      }
+}
+
