--- a/assets/scss/pages/inner-pages.scss
+++ b/assets/scss/pages/inner-pages.scss
@@ -289,7 +289,32 @@
     p {
         font-size: 18px;
         margin-bottom: 20px;
+        color: #000;
 
+    }
+    ul{
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+        li{
+          position: relative;
+          padding-left: 30px;
+          font-size: 18px;
+          color: #000;
+          &::before{
+            position: absolute;
+            content: "";
+            left: 0;
+            top: 5px;
+            width: 20px;
+            height: 20px;
+            background-image: url("data:image/svg+xml,%3Csvg width='17' height='16' viewBox='0 0 17 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M13.2062 2.42294C12.9227 2.68516 12.6348 2.95094 12.3138 3.24754C12.2052 3.17807 12.0772 3.10125 11.9542 3.01685C8.27453 0.491368 3.17544 2.37813 2.10427 6.71141C1.20973 10.3306 3.537 13.5275 6.62367 14.3239C9.83031 15.1511 12.9435 13.6209 14.2212 10.6118C14.743 9.3827 14.8253 8.1055 14.5256 6.81502C14.4234 6.37546 14.4355 6.01603 14.7388 5.66775C14.905 5.47689 15.0276 5.24833 15.2051 4.98422C15.2969 5.11533 15.3784 5.19594 15.418 5.29338C16.2976 7.46014 16.2656 9.62193 15.1634 11.6801C13.6098 14.5807 11.1049 16.0229 7.83307 15.8387C2.95021 15.5636 -0.105404 11.0796 0.744561 6.74579C1.42833 3.25963 4.70728 0.260444 8.99243 0.60375C10.3915 0.715893 11.6742 1.20193 12.8191 2.02724C12.9167 2.09765 13.0123 2.17186 13.1019 2.252C13.1377 2.284 13.155 2.33664 13.2062 2.42294Z' fill='%2347B983'/%3E%3Cpath d='M8.18021 9.24085C8.57568 8.80318 8.91353 8.41672 9.26466 8.0426C11.2543 5.92135 13.2433 3.79964 15.2426 1.68764C15.549 1.36425 15.9001 1.08117 16.246 0.798321C16.3826 0.686652 16.5616 0.626668 16.7211 0.543213C16.912 0.806145 16.7844 0.990364 16.682 1.15917C16.2986 1.79173 15.9224 2.42997 15.5089 3.04261C13.5354 5.96616 11.5559 8.88569 9.56268 11.7957C9.30307 12.1746 8.97209 12.5129 8.63519 12.8282C8.30492 13.1372 8.13351 13.123 7.76625 12.8633C7.61215 12.7545 7.45851 12.6379 7.33048 12.5008C6.04949 11.1312 4.76304 9.76647 3.5022 8.37855C2.98131 7.80527 3.065 7.45817 3.73407 7.07408C3.85309 7.0058 3.98183 6.95435 4.10369 6.8901C4.77703 6.53518 5.36051 6.58426 5.91743 7.1675C6.47483 7.75121 7.09908 8.27115 7.69536 8.8174C7.83169 8.94259 7.97395 9.06113 8.18021 9.24085Z' fill='%2347B983'/%3E%3C/svg%3E%0A");
+           background-repeat: no-repeat;  
+        }
+        &+li{
+            margin-top: 15px;
+        }
+        }
     }
 }
 
@@ -365,8 +390,17 @@
         }
     }
     .tab-content{
-        background-color: #E9EFEC;
+        // background-color: #E9EFEC;
         margin-top: 15px;
+        .logo-list{
+            display: flex;
+            justify-content: space-between;
+            gap: 30px;
+            flex-wrap: wrap;
+            img{
+                width: 20%;
+            }
+        }
     }
   }
 }
