--- a/assets/scss/components/_customers.scss
+++ b/assets/scss/components/_customers.scss
@@ -2,6 +2,7 @@
 @import '../mixins/mixins';
 
 .customers{
+    padding-bottom: 50px;
     .title {
         color: $primary;
         max-width: max-content;
@@ -26,7 +27,7 @@
         margin-top: 50px;
         &-slide{
             margin-bottom: 30px;
-            height: 50px;
+            
         }
     }
 }
