--- a/assets/scss/utilities/_resets.scss
+++ b/assets/scss/utilities/_resets.scss
@@ -46,6 +46,10 @@ button {
     z-index: 1;
 }
 
+p{
+    color: #000;
+}
+
 select.default {
     -moz-appearance: none;
     -webkit-appearance: none;
