--- a/assets/css/pages/home.css
+++ b/assets/css/pages/home.css
@@ -29,7 +29,7 @@
   content: "";
   right: 0;
   top: 0;
-  background-image: url(/assets/images/banner.png);
+  background-image: url(../../images/banner.png);
   background-position: right;
   background-size: contain;
   background-repeat: no-repeat;
