--- a/assets/scss/components/_home-contact.scss
+++ b/assets/scss/components/_home-contact.scss
@@ -2,7 +2,7 @@
     padding-top: 50px;
     padding-bottom: 50px;
     text-align: center;
-    background-image: url(/assets/images/cta-banner.png);
+    background-image: url(../../images/cta-banner.png);
     background-position: top;
     background-repeat: no-repeat;
     background-size: cover;
